immich/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1G
spec:
  ingressClassName: nginx
  rules:
  - host: filme.mon.enorme.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: { name: immich-server, port: { name: http } }
  tls:
  # use default certificate
  - hosts:
    - '*.mon.enorme.uk'

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  parentRefs: [{ name: traefik-gateway, namespace: traefik }]
  hostnames: [filme.mon.enorme.uk]
  rules:
    - backendRefs:
       - name: immich-server
         port: 2283
